--- a/templates/search/search.html.twig
+++ b/templates/search/search.html.twig
@@ -4,7 +4,7 @@
     {{ form_start(form) }}
         {{ form_row(form.title) }}
         {{ form_row(form.price) }}
-        {{ form_choicetype(form.city) }}
+        {{ form_widget(form.city) }}
 
     <button type="submit">Search</button>
     {{ form_end(form) }}
