Push video 3 de grafikart

--- a/templates/search/search.html.twig
+++ b/templates/search/search.html.twig
@@ -6,10 +6,7 @@
             {{ form_start(form) }}
             <div class="form_row">
                 <div class="col">
-                    {{ form_row(form.keyword) }}
-                </div>
-                <div class="col">
-                    {{ form_row(form.maxPrice) }}
+                    {{ form_widget(form) }}
                 </div>
                 <div class="col">
                     <button class="btn btn-primary">Submit</button>
