--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,6 +21,19 @@
                     <a class="nav-link  {%  if current_menu is defined and current_menu == 'properties' %}active{% endif %}" href="/biens">EhMerce</a>
                 </li>
             </ul>
+            {% if app.user %}
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a href="{{ path('logout') }}" class="nav-link">Logout</a>
+                    </li>
+                </ul>
+            {% else %}
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a href="{{ path('login') }}" class="nav-link">Login</a>
+                    </li>
+                </ul>
+            {% endif %}
         </div>
     </nav>
         {% block body %}{% endblock %}
