--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,17 +1,29 @@
-{% if error %}
-    <div>
-        {{ error.messageKey | trans(error.messageData, 'security') }}
+{% extends 'base.html.twig' %}
+
+{% block title 'Login' %}
+
+{% block body %}
+    <div class="container mt-4">
+
+        {% if error %}
+            <div class="alert alert-danger">
+                {{ error.messageKey | trans(error.messageData, 'security') }}
+            </div>
+        {% endif %}
+
+        <form action="{{ path('login') }}" method="post">
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text" id="username" name="_username" class="form-control" value="{{ last_username }}" />
+            </div>
+
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" id="password" name="_password" class="form-control"/>
+            </div>
+
+            <button type="submit" class="btn btn-primary">Login</button>
+        </form>
+
     </div>
-{% endif %}
-
-<body>
-    <form action="{{ path('login') }}" method="post">
-        <label for="username">Username</label>
-        <input type="text" id="username" name="_username" value="{{ last_username }}" />
-
-        <label for="password">Password</label>
-        <input type="password" id="password" name="_password" />
-
-        <button type="submit">login</button>
-    </form>
-</body>
+{% endblock %}
