--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,10 +24,20 @@
             {% if app.user %}
                 <ul class="navbar-nav">
                     <li class="nav-item">
+                        <a href="/user" class="nav-link">User</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
                         <a href="{{ path('logout') }}" class="nav-link">Logout</a>
                     </li>
                 </ul>
             {% else %}
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a href="/register" class="nav-link">Register</a>
+                    </li>
+                </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a href="{{ path('login') }}" class="nav-link">Login</a>
