--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,9 +1,19 @@
+{% extends 'base.html.twig' %}
 
-{{ form_start(form) }}
-    {{ form_row(form.username) }}
-    {{ form_row(form.email) }}
-    {{ form_row(form.plainPassword.first) }}
-    {{ form_row(form.plainPassword.second) }}
+{% block title 'Register' %}
 
-    <button type="submit">Register</button>
-{{ form_end(form) }}
+{% block body %}
+    <div class="container mt-4">
+        {{ form_start(form) }}
+            <div class="form-group">
+                {{ form_row(form.username) }}
+                {{ form_row(form.email) }}
+                {{ form_row(form.plainPassword.first) }}
+                {{ form_row(form.plainPassword.second) }}
+            </div>
+
+            <button type="submit" class="btn btn-primary">Register</button>
+        {{ form_end(form) }}
+
+    </div>
+{% endblock %}
