--- a/templates/admin/property/_form.html.twig
+++ b/templates/admin/property/_form.html.twig
@@ -4,6 +4,6 @@
 <div class="col-md-4">{{ form_row(form.description) }}</div>
 <div class="col-md-2">{{ form_row(form.city) }}</div>
 
-{{ form_widget(form) }}
+{{ form_rest(form) }}
 <button class="btn btn-primary">{{ button| default('Enregistrer')}}</button>
 {{ form_end(form) }}
