--- a/templates/admin/property/_form.html.twig
+++ b/templates/admin/property/_form.html.twig
@@ -3,6 +3,7 @@
 <div class="col-md-2">{{ form_row(form.price) }}</div>
 <div class="col-md-4">{{ form_row(form.description) }}</div>
 <div class="col-md-2">{{ form_row(form.city) }}</div>
+<div class="col-md-5">{{ form_row(form.imageFile) }}</div>
 
 {{ form_rest(form) }}
 <button class="btn btn-primary">{{ button| default('Enregistrer')}}</button>
