--- a/templates/property/show.html.twig
+++ b/templates/property/show.html.twig
@@ -8,6 +8,11 @@
 
             <div class="row">
                 <div class="col-md-8">
+                    {% if property.filename %}
+                        <img src="{{vich_uploader_asset(property,'imageFile') | imagine_filter('medium') }}" alt="card-img-top" style="width:100%;height: auto;">
+                    {% else %}
+                        <img src="{{'/images/properties/julien.jpg' | imagine_filter('medium') }}" alt="card-img-top" style="width:100%;height: auto;">
+                    {% endif %}
 
                 </div>
                 <div class="col-md-4">
@@ -43,6 +48,10 @@
                 </div>
                 <div class="col-md-4">
                     <h2>Spécificité</h2>
+                    <ul class="list-group">
+                        <li class="list-group-item">{{ property.category.name }}</li>
+                        <li class="list-group-item">{{ property.subcategory.name }}</li>
+                    </ul>
                 </div>
             </div>
 
