--- a/templates/property/index.html.twig
+++ b/templates/property/index.html.twig
@@ -14,7 +14,7 @@
                     <div class="col">
                         {{ form_row(form.maxPrice) }}
                     </div>
-                    <div class="col">
+                    <div class="col" id="category">
                         {{ form_row(form.category) }}
                     </div>
                     <div class="col">
