--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,6 +20,9 @@
                 <li class="nav-item active">
                     <a class="nav-link  {%  if current_menu is defined and current_menu == 'properties' %}active{% endif %}" href="/biens">EhMerce</a>
                 </li>
+                <li class="nav-item active">
+                    <a class="nav-link  {%  if current_menu is defined and current_menu == 'properties' %}active{% endif %}" href="/biens/api">EhMerceJSON</a>
+                </li>
             </ul>
             {% if app.user %}
                 <ul class="navbar-nav">
