--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -38,7 +38,7 @@
             {% else %}
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a href="/register" class="nav-link">Register</a>
+                        <a href="/user/register" class="nav-link">Register</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
