--- a/templates/user/update.html.twig
+++ b/templates/user/update.html.twig
@@ -1,9 +1,20 @@
 
-{{ form_start(form) }}
-    {{ form_row(form.username) }}
-    {{ form_row(form.email) }}
-    {{ form_row(form.plainPassword.first) }}
-    {{ form_row(form.plainPassword.second) }}
+{% extends 'base.html.twig' %}
 
-<button type="submit">Update</button>
-{{ form_end(form) }}
+{% block title 'Update' %}
+
+{% block body %}
+    <div class="container mt-4">
+        {{ form_start(form) }}
+        <div class="form-group">
+            {{ form_row(form.username) }}
+            {{ form_row(form.email) }}
+            {{ form_row(form.plainPassword.first) }}
+            {{ form_row(form.plainPassword.second) }}
+        </div>
+
+        <button type="submit" class="btn btn-primary">Update</button>
+        {{ form_end(form) }}
+
+    </div>
+{% endblock %}
