--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,10 +18,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link  {%  if current_menu is defined and current_menu == 'properties' %}active{% endif %}" href="/biens">EhMerce</a>
+                    <a class="nav-link  {%  if current_menu is defined and current_menu == 'properties' %}active{% endif %}" href="/biens">Recherche</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link  {%  if current_menu is defined and current_menu == 'properties' %}active{% endif %}" href="/biens/api">EhMerceJSON</a>
+                    <a class="nav-link  {%  if current_menu is defined and current_menu == 'properties' %}active{% endif %}" href="/biens/api">RechercheJSON</a>
                 </li>
             </ul>
             {% if app.user %}
