--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -33,7 +33,7 @@
     </div>
 
     <div class="container mt-4">
-        <h1>t'es un fraté fraté</h1>
+        <h1>-Résultat de la recherche</h1>
 
         <div class="row">
             {% for property in properties %}
